fixes calc misaligned checkbox

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -735,6 +735,10 @@ input[type='checkbox']:checked.autofilter,
 	margin: auto 5px;
 }
 
+.jsdialog.ui-grid-cell input[type='checkbox'] + label[for^='hidden-part-checkbox'] {
+	vertical-align: super;
+}
+
 .jsdialog.ui-text {
 	padding-inline-start: 8px;
 }
